# rbg-live-dl

./: .gitignore  README.md  credentials.json.example  pyproject.toml
src/rbg_live_dl/: __init__.py  __main__.py
